--- a/css/elzero.css
+++ b/css/elzero.css
@@ -835,6 +835,81 @@ Font color: rgb(102, 102, 102)
   left: 0;
 }
 /* End Skills */
+/* Start Steps */
+.work-steps {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  background-color: var(--section-background);
+}
+.work-steps .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.work-steps .container > img {
+  margin-right: 100px;
+  max-width: 100%;
+}
+@media (max-width: 991px) {
+  .work-steps .container {
+    flex-direction: column;
+  }
+  .work-steps .container > img {
+    margin: 0 0 50px;
+  }
+}
+.work-steps .steps .card {
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  margin-bottom: 20px;
+  background-color: #f6f5f5;
+  border: 2px solid white;
+  position: relative;
+  z-index: 1;
+}
+.work-steps .steps .card::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 0;
+  height: 0;
+  background-color: #ededed;
+  z-index: -1;
+  transition: var(--main-transition);
+}
+.work-steps .steps .card:hover::before {
+  width: 100%;
+  height: 100%;
+}
+.work-steps .steps .card img {
+  width: 64px;
+  margin-right: 30px;
+}
+.work-steps .steps .card .content h3 {
+  margin: 0;
+  font-size: 22px;
+  font-weight: 700;
+}
+.work-steps .steps .card .content p {
+  margin: 10px 0 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30.6px;
+  color: rgb(119, 119, 119);
+}
+@media (max-width: 767px) {
+  .work-steps .steps .card {
+    flex-direction: column;
+    text-align: center;
+  }
+  .work-steps .steps .card img {
+    margin: 0 0 30px;
+  }
+}
+/* End Steps */
 /* Start Animations */
 @keyframes land-up-down {
     0% {
