--- a/css/elzero.css
+++ b/css/elzero.css
@@ -8,6 +8,7 @@
   --main-color: #2196f3;
   --main-color-alt: #1787e0;
   --main-transition: 0.3s;
+  --section-background: #ececec;
 }
 html {
   scroll-behavior: smooth;
@@ -56,6 +57,7 @@ ul {
   -moz-box-shadow: 0 0 10px #ddd;
   box-shadow: 0 0 10px #ddd;
   width: 100%;
+  z-index: 999;
 }
 .header .container {
   display: flex;
@@ -127,3 +129,48 @@ ul {
   left: 0;
 }
 /* End Header */
+/* Start Landing */
+.landing {
+  z-index: 1;
+  position: relative;
+}
+.landing::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--section-background);
+  transform: translateY(-65px) skewY(-5deg);
+}
+.landing .container {
+  display: flex;
+  height: calc(100vh - 75px);
+  align-items: center;
+  justify-content: center;
+}
+.landing .container .landing-text {
+  width: 50%;
+  z-index: 999;
+}
+.landing .landing-text .title {
+  font-size: 40px;
+  font-weight: 700;
+}
+.landing .landing-text .description {
+  font-size: 23px;
+  font-weight: 400;
+  line-height: 40px;
+  color: #666;
+}
+.landing .container .landing-image {
+  width: 50%;
+  z-index: 999;
+}
+.landing .container .landing-image img {
+  width: 100%;
+}
+.landing a {
+  z-index: 999;
+  transform: translate(50%, 50%);
+}
+/* End Landing */
