--- a/css/elzero.css
+++ b/css/elzero.css
@@ -140,17 +140,27 @@ ul {
   width: 100%;
   height: 100%;
   background-color: var(--section-background);
-  transform: translateY(-65px) skewY(-5deg);
+  transform: translateY(-75px) skewY(-6deg);
 }
 .landing .container {
   display: flex;
   height: calc(100vh - 75px);
   align-items: center;
   justify-content: center;
+  padding-bottom: 120px;
 }
 .landing .container .landing-text {
   width: 50%;
   z-index: 999;
+}
+@media (max-width: 991px) {
+  .landing .container {
+    padding-bottom: 120px;
+  }
+  .landing .container .landing-text {
+    width: 100%;
+    text-align: center;
+  }
 }
 .landing .landing-text .title {
   font-size: 40px;
@@ -166,11 +176,58 @@ ul {
   width: 50%;
   z-index: 999;
 }
+@media (max-width: 991px) {
+  .landing .landing-text .title {
+    font-size: 28px;
+  }
+  .landing .landing-text .description {
+    font-size: 18px;
+  }
+  .landing .container .landing-image {
+    display: none;
+  }
+}
 .landing .container .landing-image img {
   width: 100%;
+  animation-name: land-up-down;
+  animation-duration: 2s;
+  animation-fill-mode: both;
+  animation-play-state: running;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
-.landing a {
+.landing .go-down {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
   z-index: 999;
-  transform: translate(50%, 50%);
+  transform: translateY(-14px);
+  color: var(--main-color);
+  animation-name: arrow-up-down;
+  animation-duration: 2s;
+  animation-fill-mode: both;
+  animation-play-state: running;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
 }
 /* End Landing */
+/* Start Animations*/
+@keyframes land-up-down {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-50px);
+  }
+}
+@keyframes arrow-up-down {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(30px);
+  }
+}
+/* End Animations*/
