--- a/css/elzero.css
+++ b/css/elzero.css
@@ -140,7 +140,7 @@ ul {
   width: 100%;
   height: 100%;
   background-color: var(--section-background);
-  transform: translateY(-75px) skewY(-6deg);
+  transform: translateY(-120px) skewY(-6deg);
 }
 .landing .container {
   display: flex;
@@ -202,10 +202,10 @@ ul {
   bottom: 30px;
   left: 50%;
   z-index: 999;
-  transform: translateY(-14px);
+  transform: translateY(10px);
   color: var(--main-color);
   animation-name: arrow-up-down;
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-fill-mode: both;
   animation-play-state: running;
   animation-timing-function: linear;
@@ -213,6 +213,64 @@ ul {
   animation-direction: normal;
 }
 /* End Landing */
+/* Start Megamenu */
+.header .main-nav li:last-child:hover .mega-menu {
+  /* opacity and top on hover */
+  opacity: 1;
+  top: calc(100% + 1px);
+}
+.header .mega-menu {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: calc(100% + 50px);
+  background-color: white;
+  border-bottom: 3px solid var(--main-color);
+  display: flex;
+  padding: 30px;
+  gap: 40px;
+  z-index: 100;
+  transition: top var(--main-transition);
+}
+@media (max-width: 767px) {
+  .header .mega-menu {
+    flex-direction: column;
+    gap: 0;
+  }
+}
+.header .mega-menu .image img {
+  max-width: 100%;
+}
+@media (max-width: 991px) {
+  .header .mega-menu .image img {
+    display: none;
+  }
+}
+.header .mega-menu .links {
+  min-width: 250px;
+  flex: 1;
+}
+.header .mega-menu .links li {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 15px;
+}
+.header .mega-menu .links li:not(:last-child) {
+  border-bottom: 1px solid #e9e6e6;
+}
+@media (max-width: 767px) {
+  .header .mega-menu .links li:nth-child(5) {
+    border-bottom: 1px solid #e9e6e6;
+  }
+}
+.header .mega-menu .links i {
+  margin-right: 10px;
+}
+.header .mega-menu .links a {
+  color: var(--main-color);
+}
+/* End Megamenu */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
@@ -226,8 +284,20 @@ ul {
   0% {
     transform: translateY(0);
   }
+  20% {
+    transform: translateY(-20px);
+  }
+  40% {
+    transform: translateY(0);
+  }
+  60% {
+    transform: translateY(-20px);
+  }
+  80% {
+    transform: translateY(0px);
+  }
   100% {
-    transform: translateY(30px);
+    transform: translateY(0px);
   }
 }
 /* End Animations*/
