--- a/css/elzero.css
+++ b/css/elzero.css
@@ -57,7 +57,6 @@ ul {
   -moz-box-shadow: 0 0 10px #ddd;
   box-shadow: 0 0 10px #ddd;
   width: 100%;
-  z-index: 999;
 }
 .header .container {
   display: flex;
@@ -131,7 +130,6 @@ ul {
 /* End Header */
 /* Start Landing */
 .landing {
-  z-index: 1;
   position: relative;
 }
 .landing::before {
@@ -141,6 +139,7 @@ ul {
   height: 100%;
   background-color: var(--section-background);
   transform: translateY(-120px) skewY(-6deg);
+  z-index: -1;
 }
 .landing .container {
   display: flex;
@@ -151,7 +150,6 @@ ul {
 }
 .landing .container .landing-text {
   width: 50%;
-  z-index: 999;
 }
 @media (max-width: 991px) {
   .landing .container {
@@ -174,7 +172,6 @@ ul {
 }
 .landing .container .landing-image {
   width: 50%;
-  z-index: 999;
 }
 @media (max-width: 991px) {
   .landing .landing-text .title {
@@ -201,7 +198,6 @@ ul {
   position: absolute;
   bottom: 30px;
   left: 50%;
-  z-index: 999;
   transform: translateY(10px);
   color: var(--main-color);
   animation-name: arrow-up-down;
@@ -215,13 +211,13 @@ ul {
 /* End Landing */
 /* Start Megamenu */
 .header .main-nav li:last-child:hover .mega-menu {
-  /* opacity and top on hover */
   opacity: 1;
   top: calc(100% + 1px);
+  z-index: 100;
 }
 .header .mega-menu {
-  opacity: 0;
   position: absolute;
+  opacity: 0;
   width: 100%;
   left: 0;
   top: calc(100% + 50px);
@@ -230,8 +226,7 @@ ul {
   display: flex;
   padding: 30px;
   gap: 40px;
-  z-index: 100;
-  transition: top var(--main-transition);
+  transition: top var(--main-transition), opacity var(--main-transition);
 }
 @media (max-width: 767px) {
   .header .mega-menu {
@@ -252,15 +247,35 @@ ul {
   flex: 1;
 }
 .header .mega-menu .links li {
+  position: relative;
   font-size: 18px;
   font-weight: bold;
+}
+.header .mega-menu .links li a {
   padding: 15px;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.header .mega-menu .links li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background-color: #fafafa;
+  z-index: -1;
+  transition: var(--main-transition);
+}
+.header .mega-menu .links li:hover::before {
+  width: 100%;
 }
 .header .mega-menu .links li:not(:last-child) {
   border-bottom: 1px solid #e9e6e6;
 }
 @media (max-width: 767px) {
-  .header .mega-menu .links li:nth-child(5) {
+  .header .mega-menu .links:first-of-type li:nth-child(5) {
     border-bottom: 1px solid #e9e6e6;
   }
 }
