--- a/css/elzero.css
+++ b/css/elzero.css
@@ -335,8 +335,61 @@ ul {
 /* End Megamenu */
 /* Start Articles */
 .articles {
+  padding: var(--section-padding);
 }
 .articles .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 40px;
+  margin: auto;
+  max-width: 100%;
+}
+.articles .container .card {
+  overflow: hidden;
+  border-radius: 6px;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+  transition: var(--main-transition);
+}
+.articles .container .card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+}
+.articles .container .card img {
+  max-width: 100%;
+}
+.articles .container .card .content {
+  padding: 20px;
+}
+.articles .container .card .content h3 {
+  margin: 0;
+}
+.articles .container .card .content p {
+  color: #777;
+  line-height: 1.5;
+  margin: 10px 0 0;
+}
+.articles .container .card .info {
+  padding: 20px;
+  border-top: 1px solid #e6e6e6;
+  display: flex;
+  justify-content: space-between;
+}
+.articles .container .card .info a {
+  color: var(--main-color);
+  font-weight: bold;
+}
+.articles .container .card .info i {
+  color: var(--main-color);
+  font-weight: 600;
+}
+.articles .container .card:hover .info i {
+  animation-name: more-arrow;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-play-state: running;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
 }
 /* End Articles */
 /* Start Animations*/
@@ -392,6 +445,11 @@ ul {
     border-radius: 0;
     height: 100%;
     width: 50%;
+  }
+}
+@keyframes more-arrow {
+  100% {
+    transform: translateX(10px);
   }
 }
 /* End Animations*/
