--- a/css/elzero.css
+++ b/css/elzero.css
@@ -60,6 +60,7 @@ ul {
   border: 2px solid black;
   width: fit-content;
   transition: 0.5s;
+  z-index: 1;
 }
 .main-title::before,
 .main-title::after {
@@ -67,8 +68,8 @@ ul {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   background-color: var(--main-color-alt);
   border-radius: 50%;
   transition: 0.5s;
@@ -392,6 +393,55 @@ ul {
   animation-direction: normal;
 }
 /* End Articles */
+/* Start Gallery */
+.gallery {
+  padding: var(--section-padding);
+  background-color: var(--section-background);
+}
+.gallery .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+  max-width: 100%;
+}
+.gallery .container .item {
+  overflow: hidden;
+  position: relative;
+  background-color: white;
+  padding: 15px;
+}
+.gallery .container .item .image {
+  position: relative;
+  overflow: hidden;
+  max-width: 100%;
+}
+.gallery .container .item .image::before {
+  content: "";
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.2);
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+}
+.gallery .container .item .image img {
+  max-width: 100%;
+}
+.gallery .container .item .image:hover img {
+  transition: var(--main-transition);
+  transform: scale(1.1) rotate(5deg);
+}
+.gallery .container .item .image:hover::before {
+  animation-name: flashing;
+  animation-duration: 0.5s;
+  animation-fill-mode: initial;
+  animation-play-state: running;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  z-index: 999;
+}
+/* End Gallery */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
@@ -431,7 +481,7 @@ ul {
     left: 0;
     border-radius: 0;
     height: 100%;
-    width: 50%;
+    width: 60%;
   }
 }
 @keyframes right-move {
@@ -450,6 +500,22 @@ ul {
 @keyframes more-arrow {
   100% {
     transform: translateX(10px);
+  }
+}
+@keyframes flashing {
+  50% {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /* background-color: rgba(255, 255, 255, 0.2); */
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0);
   }
 }
 /* End Animations*/
