--- a/css/elzero.css
+++ b/css/elzero.css
@@ -574,6 +574,52 @@ ul {
   border-width: 170px 500px 170px 0;
 }
 /* End Features */
+/* Start Testimonials */
+.testimonials {
+  padding: var(--section-padding);
+  background-color: var(--section-background);
+}
+.testimonials .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+  max-width: 100%;
+}
+.testimonials .card {
+  background-color: white;
+  position: relative;
+  padding: 20px;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.07);
+}
+.testimonials .card img {
+  position: absolute;
+  width: 100px;
+  top: -50px;
+  right: -10px;
+  border-radius: 50%;
+  border: 10px solid var(--section-background);
+}
+.testimonials .card .name {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.testimonials .card .title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: #777;
+}
+.testimonials .card .stars .filled {
+  color: #ffc107;
+}
+.testimonials .card .text {
+  color: #777;
+  line-height: 1.5;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+/* End Testimonials */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
