--- a/css/elzero.css
+++ b/css/elzero.css
@@ -336,7 +336,8 @@ ul {
 /* End Megamenu */
 /* Start Articles */
 .articles {
-  padding: var(--section-padding) 0;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
 }
 .articles .container {
   display: grid;
@@ -395,7 +396,8 @@ ul {
 /* End Articles */
 /* Start Gallery */
 .gallery {
-  padding: var(--section-padding) 0;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
   background-color: var(--section-background);
 }
 .gallery .container {
@@ -444,7 +446,8 @@ ul {
 /* End Gallery */
 /* Start Features */
 .features {
-  padding: var(--section-padding) 0;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
 }
 .features .container {
   display: grid;
@@ -576,7 +579,8 @@ ul {
 /* End Features */
 /* Start Testimonials */
 .testimonials {
-  padding: var(--section-padding) 0;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
   background-color: var(--section-background);
 }
 .testimonials .container {
@@ -622,7 +626,8 @@ ul {
 /* End Testimonials */
 /* Start Team */
 .team {
-  padding: var(--section-padding) 0;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
 }
 .team .container {
   display: grid;
@@ -701,6 +706,82 @@ ul {
   margin-bottom: 25px;
 }
 /* End Team */
+/* Start Services */
+.services {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
+}
+.services .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+}
+.services .card {
+  background-color: white;
+  box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+  position: relative;
+  transition: var(--main-transition);
+}
+.services .card:hover {
+  transform: translateY(-10px);
+}
+.services .card:hover::before {
+  transform: scaleX(1);
+}
+.services .card::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--main-color);
+  transform: scaleX(0);
+  transition: var(--main-transition);
+}
+.services .card .content {
+  text-align: center;
+  padding-top: 30px;
+  margin-bottom: 36px;
+}
+.services .card .content i {
+  color: #d5d5d5;
+}
+.services .card .content .title {
+  color: var(--main-color);
+  font-size: 25px;
+}
+.services .card .footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0 0;
+  position: relative;
+}
+.services .card .footer::after {
+  content: "";
+  position: absolute;
+  left: 70px;
+  top: 0;
+  width: 50px;
+  height: 100%;
+  background-color: #d5d5d5;
+  transform: skewX(-30deg);
+}
+.services .card .footer .index {
+  display: block;
+  padding: 6px 30px 6px 20px;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  background-color: var(--main-color);
+}
+.services .card .footer .link {
+  color: var(--main-color);
+  padding-right: 10px;
+}
+/* End Services */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
