--- a/css/elzero.css
+++ b/css/elzero.css
@@ -782,6 +782,47 @@ ul {
   padding-right: 10px;
 }
 /* End Services */
+/* Start Skills */
+.our-skills {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+.our-skills .container {
+  display: flex;
+}
+@media (max-width: 991px) {
+  .our-skills .image {
+    display: none;
+  }
+}
+.our-skills .skills {
+  flex: 1;
+}
+.our-skills .skills .skill .info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.our-skills .skills .skill .info .value {
+  font-size: 12px;
+  font-weight: bold;
+  color: var(--main-color);
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 3px 5px;
+}
+.our-skills .skills .skill .progress {
+  background-color: #eee;
+  width: 100%;
+  height: 30px;
+}
+.our-skills .skill .progress .bar {
+  display: block;
+  height: 100%;
+  background-color: var(--main-color);
+}
+/* End Skills */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
