--- a/css/elzero.css
+++ b/css/elzero.css
@@ -823,6 +823,86 @@ ul {
   background-color: var(--main-color);
 }
 /* End Skills */
+/* Start Steps */
+.work-steps {
+  background-color: var(--section-background);
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+.work-steps .container {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .work-steps .container {
+    flex-direction: column;
+  }
+  .work-steps .image {
+    margin: 0 0 50px;
+  }
+}
+.work-steps .image {
+  margin-right: 100px;
+  max-width: 100%;
+}
+.work-steps .steps {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.work-steps .steps .step {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  border: 1px solid white;
+  background-color: #f6f5f5;
+}
+.work-steps .steps .step::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--section-background);
+  z-index: 0;
+  transform: scale(0, 0);
+  transition: var(--main-transition);
+}
+.work-steps .steps .step:hover::before {
+  transform: scale(1, 1);
+}
+.work-steps .steps .step img {
+  width: 64px;
+  height: 64px;
+  margin-right: 30px;
+}
+@media (max-width: 767px) {
+  .work-steps .steps .step {
+    flex-direction: column;
+    text-align: center;
+  }
+  .work-steps .steps .step img {
+    margin: 0 0 20px;
+  }
+}
+.work-steps .steps .step .content,
+.work-steps .steps .step img {
+  z-index: 1;
+}
+.work-steps .steps .step .content .title {
+  font-size: 22px;
+  margin: 0 auto;
+}
+.work-steps .steps .step .content .description {
+  font-size: 18px;
+  line-height: 1.7;
+  margin-bottom: 0;
+  margin-top: 10px;
+  color: #777;
+}
+/* End Steps */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
