--- a/css/elzero.css
+++ b/css/elzero.css
@@ -1232,6 +1232,9 @@ ul {
 .stats .section-title {
   font-size: 40px;
   text-align: center;
+  width: fit-content;
+  position: relative;
+  margin: 0px auto 50px;
 }
 .stats .container {
   display: grid;
@@ -1290,6 +1293,100 @@ ul {
   font-style: italic;
 }
 /* End Stats */
+/* Start Discount */
+.discount {
+  display: flex;
+  height: 100vh;
+}
+@media (max-width: 991px) {
+  .discount {
+    flex-direction: column;
+  }
+}
+.discount .content {
+  background-image: url("./../imgs/discount-background1.jpg");
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 0 20px;
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 2;
+  animation: change-background 10s linear infinite;
+}
+.discount .content::before {
+  content: "";
+  position: absolute;
+  background-color: rgb(23 135 224 /97%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.discount .content .title {
+  font-size: 40px;
+  letter-spacing: -2px;
+}
+.discount .content .description {
+  font-size: 18px;
+  line-height: 1.6;
+  max-width: 500px;
+}
+.discount .content img {
+  width: 300px;
+  max-width: 100%;
+}
+.discount .request {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 50%;
+  padding-bottom: 50px;
+}
+.discount .form {
+  padding: 0 20px;
+}
+.discount .form .title {
+  font-size: 40px;
+  letter-spacing: -2px;
+}
+.discount .form form input,
+.discount .form form textarea {
+  display: block;
+  width: 100%;
+  margin-bottom: 25px;
+  padding: 15px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  caret-color: var(--main-color);
+  background-color: #f9f9f9;
+}
+.discount .form form input:focus,
+.discount .form form textarea:focus {
+  outline: none;
+}
+.discount .form form input[type="submit"] {
+  border: none;
+  background-color: var(--main-color);
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+  transition: var(--main-transition);
+}
+.discount .form form input[type="submit"]:hover {
+  background-color: var(--main-color-alt);
+}
+.discount .form textarea {
+  resize: none;
+  height: 200px;
+}
+/* End Discount */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
@@ -1363,6 +1460,15 @@ ul {
     top: 0;
     left: 0;
     background-color: rgba(255, 255, 255, 0);
+  }
+}
+@keyframes change-background {
+  0%,
+  100% {
+    background-image: url("../imgs/discount-background1.jpg");
+  }
+  50% {
+    background-image: url("../imgs/discount-background2.jpg");
   }
 }
 /* End Animations*/
