--- a/css/elzero.css
+++ b/css/elzero.css
@@ -1296,7 +1296,7 @@ ul {
 /* Start Discount */
 .discount {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 }
 @media (max-width: 991px) {
   .discount {
@@ -1387,6 +1387,106 @@ ul {
   height: 200px;
 }
 /* End Discount */
+/* Start Footer */
+.page-footer {
+  background-color: #191919;
+  color: white;
+  padding: 70px 0 0;
+}
+.page-footer .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 40px;
+}
+.page-footer .socials .title {
+  font-size: 50px;
+  margin: 0 0 20px;
+}
+.page-footer .socials .social {
+  color: #b9b9b9;
+  display: inline-flex;
+  width: 50px;
+  height: 50px;
+  background-color: #313131;
+  margin-right: 10px;
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+.page-footer .socials .fb::before,
+.page-footer .socials .twr::before,
+.page-footer .socials .ytb::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.page-footer .socials .fb:hover::before {
+  background-color: var(--main-color-alt);
+}
+.page-footer .socials .twr:hover::before {
+  background-color: var(--main-color);
+}
+.page-footer .socials .ytb:hover::before {
+  background-color: red;
+}
+.page-footer .socials .description {
+  line-height: 2;
+  color: #b9b9b9;
+}
+.page-footer .links li {
+  padding: 15px 0;
+}
+.page-footer .links .link {
+  display: block;
+  color: #b9b9b9;
+  transition: var(--main-transition);
+}
+.page-footer .links li:hover .link {
+  transform: translateX(10px);
+}
+.page-footer .links li:not(:last-child) {
+  border-bottom: 1px solid #777;
+}
+.page-footer .links .link i {
+  color: var(--main-color);
+  margin-right: 10px;
+}
+.contacts .contact {
+  color: #b9b9b9;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.contacts .contact i {
+  color: var(--main-color);
+  font-size: 25px;
+  margin-right: 10px;
+}
+.contacts .contact span {
+  line-height: 1.5;
+}
+.contacts .contact .address {
+  margin-left: 8px;
+}
+.page-footer .mini-gallery img {
+  width: 78px;
+  border: 3px solid white;
+  margin: 2px;
+}
+.page-footer .copyright {
+  padding: 20px 0;
+  text-align: center;
+  border-top: 1px solid #444;
+  margin: 50px 0 0;
+}
+/* End Footer */
 /* Start Animations*/
 @keyframes land-up-down {
   0% {
