--- a/css/elzero.css
+++ b/css/elzero.css
@@ -94,6 +94,21 @@ ul {
   z-index: -1;
   animation: right-move 0.5s linear forwards;
 }
+/* Spikes */
+.spikes {
+  position: relative;
+}
+.spikes::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 30px;
+  z-index: 1;
+  background-image: linear-gradient(135deg, white 25%, transparent 25%),
+    linear-gradient(225deg, white 25%, transparent 25%);
+  background-size: 30px 30px;
+}
 /* Dots */
 .dots {
   background-image: url("./../imgs/dots.png");
@@ -1427,10 +1442,10 @@ ul {
   z-index: -1;
 }
 .page-footer .socials .fb:hover::before {
-  background-color: var(--main-color-alt);
+  background-color: #1877f2;
 }
 .page-footer .socials .twr:hover::before {
-  background-color: var(--main-color);
+  background-color: #1da1f2;
 }
 .page-footer .socials .ytb:hover::before {
   background-color: red;
@@ -1449,6 +1464,7 @@ ul {
 }
 .page-footer .links li:hover .link {
   transform: translateX(10px);
+  color: white;
 }
 .page-footer .links li:not(:last-child) {
   border-bottom: 1px solid #777;
@@ -1485,6 +1501,17 @@ ul {
   text-align: center;
   border-top: 1px solid #444;
   margin: 50px 0 0;
+}
+@media (max-width: 767px) {
+  .page-footer {
+    text-align: center;
+  }
+  .page-footer .contacts .contact {
+    flex-direction: column;
+  }
+  .page-footer .contacts .contact i {
+    margin-bottom: 10px;
+  }
 }
 /* End Footer */
 /* Start Animations*/
